--- a/GK-Tao/GK-Tao.csproj
+++ b/GK-Tao/GK-Tao.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Players\UserPlayer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestEnv.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
